upgrade css root in html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Add your recipe title here -->
     <title>Best Virgin Coctail</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link href="index.css" rel="stylesheet best summer" type="text/css" />
+    <link href="resources/style.css" rel="stylesheet best summer" type="text/css" />
   </head>
 	<body>
 		<div id="container">		
